--- a/public/sites/all/modules/contrib/panelizer/CHANGELOG.txt
+++ b/public/sites/all/modules/contrib/panelizer/CHANGELOG.txt
@@ -16,6 +16,13 @@ Panelizer 7.x-3.x-dev, xxxx-xx-xx
 #2192863 by niko-, mrjmd, mglaman, DamienMcKenna: Don't load displays for
   disabled view modes.
 #2416405 by cmonnow, DamienMcKenna: Improved logic in hook_entity_insert().
+#2266393 by DamienMcKenna: Give a warning message if update 7106 fails due to
+  multiple records for the same entity view mode.
+#2435003 by EclipseGc, DamienMcKenna: Add hook_panelizer_access() to allow each
+  operation's permissions to be extended.
+#2283769 by frankcarey, guillaumev, DamienMcKenna: Use standard permissions to
+  control IPE access.
+#2445769 by DamienMcKenna: Unable to clone displays.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
