drupal security updates

--- a/public/sites/all/modules/contrib/panelizer/CHANGELOG.txt
+++ b/public/sites/all/modules/contrib/panelizer/CHANGELOG.txt
@@ -23,6 +23,26 @@ Panelizer 7.x-3.x-dev, xxxx-xx-xx
 #2283769 by frankcarey, guillaumev, DamienMcKenna: Use standard permissions to
   control IPE access.
 #2445769 by DamienMcKenna: Unable to clone displays.
+#2451643 by DamienMcKenna: Reworked logic controlling when warning messages are
+  displayed about page_manager needing to be enabled.
+#2457711 by DamienMcKenna: 'content' local tasks should have been default.
+#2465333 by EclipseGc: Add hook_panelizer_access_alter() for the new
+  hook_panelizer_access().
+#2462315 by DamienMcKenna: Fix update 7115 and regressions caused by it.
+#2469411 by DamienMcKenna: Added Book Navigation pane to the default display if
+  the Book module is enabled.
+#2421321 by DamienMcKenna: Fixed logic that resulted in access-denied errors
+  when loading settings pages.
+#2467725 by DamienMcKenna: Additional fixes to update 7115.
+#2450271 by mpotter: Nested Panels displays caused title to be displayed for
+  wrong node.
+#2469593 by DamienMcKenna: Added submission pane to the default display if
+  the Webform module is enabled.
+#2422667 by Devin Carlson, DamienMcKenna: Add basic test coverage.
+#2460537 by DamienMcKenna: Fixed "Notice: Undefined offset: 3 in
+  _menu_translate" error.
+#2470257 by DamienMcKenna: Incorrect destination URLs in some forms resulted in
+  "missing" links; removed references to the /list pages.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
